--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
-    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
+  },
+  "devDependencies": {
+    "webpack": "^5.72.1"
   }
 }
