--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.5",
+    "@tonejs/midi": "^2.0.28",
     "bootstrap": "^5.1.3",
+    "tone": "^14.7.77",
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
