--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@popperjs/core": "^2.11.5",
     "@tonejs/midi": "^2.0.28",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
+    "chartkick": "^4.2.0",
     "tone": "^14.7.77",
     "webpack-cli": "^4.9.2"
   },
