--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,14 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+amazon:
+  service: BetterS3
+  access_key_id: <%= ENV["AWS_ACESS_KEY_ID"] %>
+  secret_access_key: <%= ENV["AWS_SECRET_ACESS_KEY"] %>
+  region: <%= ENV["AWS_REGION"] %>
+  bucket: <%= ENV["AWS_BUCKET"] %>
+  root: <%= ENV["AWS_FOLDER"] %>
+
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
@@ -33,6 +41,6 @@ local:
 #   primary: local
 #   mirrors: [ amazon, google, microsoft ]
 
-cloudinary:
-  service: Cloudinary
-  folder: <%= Rails.env %>
+# cloudinary:
+#   service: Cloudinary
+#   folder: <%= Rails.env %>
